--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -54,51 +54,72 @@
         <div></div>
     </div>
 </div>
-    <main>
-        <div class="user-info-cul">
-            <div class="cul-item">
-                <div class="cul-item-head-container">
-                    <div class="cul-item-head"></div>
-                </div>
-                <div class="cul-item-input">
-                    <input id="set-name">
-                    <span class="cul-item-placeholder">User name</span>
-                </div>
+<main>
+    <div class="user-info-cul">
+        <div class="cul-item">
+            <div class="cul-item-head-container">
+                <div class="cul-item-head"></div>
+            </div>
+            <div class="cul-item-input">
+                <input id="set-name">
+                <span class="cul-item-placeholder">User name</span>
             </div>
         </div>
-        <div class="user-info-cul">
-            <div class="cul-item">
-                <div class="cul-item-head-container">
-                    <div class="cul-item-head">You will need your email address to login</div>
-                </div>
+    </div>
+    <div class="user-info-cul">
+        <div class="cul-item">
+            <div class="cul-item-head-container">
+                <div class="cul-item-head">You will need your email address to login</div>
+            </div>
 
-                <div class="cul-item-input">
-                    <input id="set-email">
-                    <span class="cul-item-placeholder">E-mail address</span>
-                </div>
+            <div class="cul-item-input">
+                <input id="set-email">
+                <span class="cul-item-placeholder">E-mail address</span>
             </div>
         </div>
-        <div class="item-space"></div>
-        <div class="user-info-cul">
-            <div class="cul-item">
-                <div class="cul-item-head-container">
-                    <div class="cul-item-head">You password should 8 - 16 characters long and at least one number.</div>
-                </div>
-                <div class="cul-item-input">
-                    <input type="password" id="set-password">
-                    <span class="cul-item-placeholder">Password</span>
-                </div>
+    </div>
+    <div class="user-info-cul">
+        <div class="cul-item">
+            <div class="cul-item-input">
+                <input id="verify">
+                <span class="cul-item-placeholder">Verification Code</span>
             </div>
         </div>
-        <div class="user-info-cul">
-            <div class="cul-item">
-                <div class="cul-item-input">
-                    <input type="password" id="set-confirm-password">
-                    <span class="cul-item-placeholder">Confirm Password</span>
-                </div>
+        <div class="cul-item">
+            <div class="cul-item-input">
+                <button type="button" id="getVerify">Get Verification Code</button>
             </div>
         </div>
-    </main>
+    </div>
+    <div class="item-space"></div>
+    <div class="user-info-cul">
+        <div class="cul-item">
+            <div class="cul-item-head-container">
+                <div class="cul-item-head">You password should 8 - 16 characters long and at least one number.</div>
+            </div>
+            <div class="cul-item-input">
+                <input type="password" id="set-password">
+                <span class="cul-item-placeholder">Password</span>
+            </div>
+        </div>
+    </div>
+    <div class="user-info-cul">
+        <div class="cul-item">
+            <div class="cul-item-input">
+                <input type="password" id="set-confirm-password">
+                <span class="cul-item-placeholder">Confirm Password</span>
+            </div>
+        </div>
+    </div>
+    <div class="user-info-cul">
+        <div class="cul-item">
+            <div class="cul-item-input">
+                <button type="button" id="post">Create Account</button>
+            </div>
+        </div>
+    </div>
+
+</main>
 <script src="./script/register.js"></script>
 </body>
 </html>
