add form to post create account

--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -95,7 +95,7 @@
     <div class="user-info-cul">
         <div class="cul-item">
             <div class="cul-item-head-container">
-                <div class="cul-item-head">You password should 8 - 16 characters long and at least one number.</div>
+                <div class="cul-item-head">You password must be 8 - 16 characters long and at least one number.</div>
             </div>
             <div class="cul-item-input">
                 <input type="password" id="set-password">
