--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -21,10 +21,10 @@
             </div>
         </div>
         <div class="button-area">
-            <button>Register</button>
-            <button>Login</button>
+            <button id="register">Register</button>
+            <button id="login">Login</button>
         </div>
     </main>
-    <script src="./script/register.js"></script>
+    <script src="./script/login.js"></script>
 </body>
 </html>
