migrate to react

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,89 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>TodayUsyd</title>
-    <link href="style/colour.css" type="text/css" rel="stylesheet">
-    <link href="style/navbar.css" type="text/css" rel="stylesheet">
-    <link href="style/index.css" type="text/css" rel="stylesheet">
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
-</head>
-<body>
-<div class="nav-bar">
-    <div class="nav-bar-left">
-        <div class="logo">
-            TodayUsyd
-        </div>
-    </div>
-    <div class="nav-bar-search">
-        <div class="nav-search-container">
-            <form class="search-form">
-                <div class="search-form-input">
-                    <input type="text" maxlength="60" placeholder="Search" id="nav-search">
-                </div>
-                <div class="search-form-btn">
-                    <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
-                        <circle cx="8" cy="8" r="5" style="stroke:#aaa;stroke-width:2; fill: none"></circle>
-                        <line x1="11.5" y1="11.5" x2="15" y2="15" style="stroke:#aaa;stroke-width:2"></line>
-                    </svg>
-                </div>
-            </form>
-            <div class="search-panel" id="search-panel">
-            </div>
-        </div>
-    </div>
-    <div class="nav-bar-right">
-        <div class="nav-user">
-            <div class="nav-user-icon icon-small">
-                <a href="https://" target="_blank">
-                    <img src="img/testIcon.webp">
-                </a>
-            </div>
-            <div class="nav-user-portal">
-                <a class="user-name popup-item" style="margin-top: 25px; font-weight: bold;">test UN</a>
-                <a class="user-home popup-item" style="margin-top: 5px">Home</a>
-                <a class="user-friends popup-item">Friends</a>
-                <a class="user-history popup-item">History</a>
-                <a class="user-setting popup-item" style="margin-bottom: 25px">Setting</a>
-            </div>
-        </div>
-
-        <div class="nav-notification">Message</div>
-        <div></div>
-    </div>
-</div>
-<main>
-    <section style="margin-top: 200px;">
-        <div class="nav-bar-search">
-            <div class="nav-search-container">
-                <form class="search-form">
-                    <div class="search-form-input">
-                        <input type="text" maxlength="60" placeholder="Search">
-                    </div>
-                    <div class="search-form-btn">
-                        <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
-                            <circle cx="8" cy="8" r="5" style="stroke:#aaa;stroke-width:2; fill: none"></circle>
-                            <line x1="11.5" y1="11.5" x2="15" y2="15" style="stroke:#aaa;stroke-width:2"></line>
-                        </svg>
-                    </div>
-                </form>
-                <div class="search-panel">
-                </div>
-            </div>
-        </div>
-    </section>
-    <section>
-        <div class="main-entry">
-            <div class="main-entry-item">Course</div>
-            <div class="main-entry-item">Market</div>
-        </div>
-    </section>
-    <section>
-        <!--        Add most recent post here.    -->
-    </section>
-</main>
-<script src="script/nav.js"></script>
-<script src="script/index.js"></script>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>React App</title><script defer="defer" src="/static/js/index.53308bb4.js"></script><link href="/static/css/index.f27d13c1.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
