add auth on both side

--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -1,1 +1,1 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><title>Title</title><script defer="defer" src="/static/js/register.85c56d8a.js"></script><link href="/static/css/register.110244ea.css" rel="stylesheet"></head><body></body></html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><title>Create Account</title><script defer="defer" src="/static/js/register.4b5aacfa.js"></script><link href="/static/css/register.deb96d3d.css" rel="stylesheet"></head><body></body></html>
